Add lesson selector to index.html
Added a lesson selector dropdown to the main section.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   </nav>
 
   <main>
+    <!-- Lesson Selector -->
+    <select id="lessonSelector"></select>
+
     <!-- Lesson Tab -->
     <section id="lessonTab" class="tab">
       <h2 id="lessonTitle"></h2>
